# foro-rustfmt

./: Cargo.toml  README.md  act-event-file.json  dll-pack-build-local.sh  post_build_local.sh  rust-toolchain  rust-toolchain.toml
.github/workflows/: release.yml
src/: format.rs  lib.rs  main.rs
