[package]
name = "onefmt-rustfmt"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/nahco314/onefmt-rustfmt"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.87"
rustfmt-nightly = { version = "1.7.1", git = "https://github.com/rust-lang/rustfmt" }
onefmt-plugin-utils = { git = "https://github.com/nahco314/onefmt-plugin-utils", version = "0.1.0" }
serde_json = "1.0.128"

[profile.release]
rpath = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Which kinds of built libraries to include in the final archives
package-libraries = "cdylib"
# Which kinds of packaged libraries to install
install-libraries = "cdylib"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
