[package]
name = "foro-rustfmt"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/nahco314/foro-rustfmt"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.87"
rustfmt-nightly = { version = "1.7.1", git = "https://github.com/rust-lang/rustfmt" }
foro-plugin-utils = { git = "https://github.com/nahco314/foro-plugin-utils", version = "0.1.0" }
serde_json = "1.0.128"

[profile.release]
rpath = true

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
