[package]
name = "foro-rustfmt"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/nahco314/foro-rustfmt"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.87"
rustfmt-nightly = { version = "1.7.1", git = "https://github.com/rust-lang/rustfmt" }
foro-plugin-utils = { git = "https://github.com/nahco314/foro-plugin-utils", version = "0.2.0" }
serde_json = "1.0.128"
ignore = "0.4.23"

[profile.super-release]
inherits = "release"
opt-level = 3
codegen-units = 1
debug = false
lto = "fat"
# panic = "abort"

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true
